# re-data-service

./: .env.example  Dockerfile  README.md  pyproject.toml
src/re_data/: __init__.py  cache.py  config.py  dependencies.py  main.py
src/re_data/ingest/: __init__.py  csv_transactions.py  index.py  parsers.py  runner.py
src/re_data/market/: __init__.py  aliases.py  areas.py  index.py  lookup.py
src/re_data/models/: __init__.py  api.py  domain.py  market_api.py
src/re_data/routers/: __init__.py  admin.py  dataset.py  health.py  market.py
src/re_data/store/: __init__.py  dataset_store.py
tests/: conftest.py  test_dataset_api.py  test_degraded_start.py  test_health_api.py  test_ingest_parity.py  test_ingest_schemas.py  test_market_areas_api.py  test_market_cache.py  test_market_index_api.py  test_market_parity.py  test_market_ppsf_api.py  test_parsers.py  test_scaffold.py  test_store_reload.py
